@@ -1,6 +1,6 @@
 require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
 
-describe "/campaigns/show.html.erb" do
+describe "/campaigns/show.html.haml" do
   include CampaignsHelper
 
   before(:each) do
