@@ -1,24 +1,24 @@
 require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
 
-describe "/opportunities/show.html.erb" do
-  include OpportunitiesHelper
+describe "/contacts/show.html.haml" do
+  include ContactsHelper
 
   before(:each) do
     @current_user = Factory(:user)
-    assigns[:opportunity] = Factory(:opportunity, :id => 42)
+    assigns[:contact] = Factory(:contact, :id => 42)
     assigns[:users] = [ @current_user ]
     assigns[:current_user] = @current_user
     assigns[:comment] = Comment.new
   end
 
-  it "should render opportunity landing page" do
+  it "should render contact landing page" do
     template.should_receive(:render).with(hash_including(:partial => "common/new_comment"))
     template.should_receive(:render).with(hash_including(:partial => "common/comment"))
-    template.should_receive(:render).with(hash_including(:partial => "contacts/contact"))
+    template.should_receive(:render).with(hash_including(:partial => "opportunities/opportunity"))
 
-    render "/opportunities/show.html.haml"
+    render "/contacts/show.html.haml"
 
-    response.should have_tag("div[id=edit_opportunity]")
+    response.should have_tag("div[id=edit_contact]")
   end
 
 end
