@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Mar 29, 2009
+---------------------------------------------------------------------
+- Finished with [Edit Campaign] including controller and view specs.
+
 Sat, Mar 28, 2009
 ---------------------------------------------------------------------
 - Fixed updating permissions bug in [uses_user_permissions] plugin.
